0025017: Visualization - materials in Raytracing are messed up